# DeltaSEIS

./: .gitattributes  .gitignore  CLEANUP_INSTRUCTIONS.md  MANIFEST.in  README.md  SOLUTION_SUMMARY.md  deltaseis_env.yml  pixi.toml  pyproject.toml
config/: seismic_headers.json
deltaseis/: __init__.py  base_seismic.py
deltaseis/config/: seismic_headers.json
deltaseis/data/: README.md  bathy_clip_bergen0111a.asc.aux.xml  bever_geluid_data.sgy  geen_hol_data.sgy  hol_data.sgy  sfs_GNSS_SHOTS_FAR_OFFSET.txt  sfs_GNSS_geophones.txt
deltaseis/export/: export_seismic_segy.py  export_seismic_sg2.py
deltaseis/processing/: preprocessing.py  surfacewaves.py
deltaseis/readers/: parser_seismic_segy.py  reader_dss_txt.py  reader_grid_to_horizon.py  reader_seismic_oscilloscope.py  reader_seismic_seisnc.py  reader_seismic_semd.py
deltaseis/tools/: AquaSpark_oscilloscope_to_segy  AquaSpark_pulse_test.py  AquaSpark_pulse_test_robust.py  Exercise1-checkpoint.ipynb  convert_segy_seisnc  convert_segy_seisnc.py  merge.py  moviemaker.py  nans_handler.py  navigation.py  netcdf2xyz.py  qc.py  segy_editor.py  segy_editor_numba.py  segy_navigation_to_shape.py
docs/: _config.yml  index.md
examples/: DIS_seismic_qc.py  analyze_deconvolution.py  analyze_wavelet.py  diagnose_bandpass.py  graverij_bevergeluid_detectie.py  graverij_beverhol_detectie.py  graverij_golfveld_bevergeluid.avi  graverij_golfveld_beverhol.avi  graverij_golfveld_geenbeverhol.avi  process_xstar.py  seismic_field_school.py  seismic_field_school_p-survey.py  seismic_field_school_refraction-survey.py  seismic_field_school_sh-survey.py  simulation2seismic.py  test_decon_parameters.py  test_signature_optimization.py  test_top_mute.py  top_mute_examples.py  verify_bandpass_fix.py
gpmt/: __init__.py  base_seismic.py
gpmt/readers/: parser_seismic_segy.py  reader_grid_to_horizon.py  reader_seismic_sg2.py  reader_seismic_tdms.py
gpmt/tools/: merge.py  segy_editor.py  segy_navigation_despiker.py
tutorials/: deltaseis_test.py  difference_plots.py  merge_segy_files.py  plot_npy.py  plot_shot.py  pre-stack_data.py  segy2pickle.py  segy_edit_template_script.py  segy_editing.ipynb  specfem2vista.py  waal_seismic_processing.py  waal_seismiek.py  waal_seismiek_selection.py
